--- a/front-server/package.json
+++ b/front-server/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.6.7",
     "@grpc/proto-loader": "^0.6.9",
+    "mysql": "^2.18.1",
     "nodejs-websocket": "^1.7.2"
   },
   "name": "front-server",
